repo-example/components/web/base/web-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: web
  labels:
    app: repo-example
    component: web
spec:
  to:
    kind: Service
    name: web
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
